# llm-evals

./: .env  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Justfile  README.md  agentic.py  aggregate_results.py  catchErrors.js  cleanup_old_logs.py  create_inspect_logs.py  create_inspect_logs_article_tracking.py  create_inspect_logs_fema.py  create_inspect_logs_grab_bag.py  eval.py  eval_results.csv  extract_results.py  llm_provider.py  observablehq.config.js  package-lock.json  package.json  pyproject.toml  recreate_logs.py  search_errors.py  test_eval.py
cli/: cli.py
logs/: 2025-09-17T17-47-27-00-00-article-tracking-trump-gpt-4o-mini-a420307cb9424f908a7e30.eval  2025-09-17T17-47-35-00-00-article-tracking-trump-qwen3-14b-4b9bb38ac9cd42a7a1f3b0.eval  2025-09-17T17-47-42-00-00-article-tracking-trump-gemma-3-12b-9ffb2b8e3ea0426ca1ce23.eval  2025-09-17T17-47-49-00-00-article-tracking-trump-claude-sonnet-4-0-4ede57ed9fb44a238e2fc3.eval  2025-09-17T17-47-57-00-00-article-tracking-trump-claude-opus-4-0-9453788c9b5547da82b68c.eval  2025-09-17T17-48-04-00-00-article-tracking-trump-qwen3-235b-a22b-2507-a3bb2545a0154414949b62.eval  2025-09-17T17-48-11-00-00-article-tracking-trump-deepseek-v3-0324-940d7935709549268b147d.eval  2025-09-17T17-48-18-00-00-article-tracking-trump-gpt-oss-20b-8d813a70b3c049a7902c84.eval  2025-09-17T17-49-15-00-00-article-tracking-trump-gpt-oss-120b-7d2ab1a4d70a48f088c164.eval  2025-09-17T17-49-47-00-00-social-media-insults-gpt-4o-mini-44adc39520bb4ee3a50390.eval  2025-09-17T17-50-19-00-00-nhtsa-recalls-gpt-4o-mini-0cd3516cce6f486eaf2bb5.eval  2025-09-17T17-50-26-00-00-political-fundraising-emails-gpt-4o-mini-b99d74344d9b4ffeb28ed0.eval  2025-09-17T17-50-29-00-00-political-fundraising-emails-gpt-4-1-mini-a7eb0187d0044aa193adcd.eval  2025-09-17T17-50-33-00-00-political-fundraising-emails-o4-mini-1fc9ff4a0e1b419ca2f386.eval  2025-09-17T17-50-37-00-00-political-fundraising-emails-gemini-1-5-flash-002-b8f1253d0beb4444b28fb1.eval  2025-09-17T17-51-14-00-00-extract-fema-incidents-gpt-4o-9c7795b7e7604e1096fa42.eval  (+183 more)
(+12990 files in other folders)
