[project]
name = "llm-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "llm-gemini>=0.24",
    "llm>=0.27.1",
    "llm-mlx>=0.3 ; platform_system == 'Darwin'",
    "flask>=3.1.1",
    "llm-anthropic==0.16",
    "llm-openrouter>=0.4.1",
    "llm-lmstudio>=0.2.0",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.6",
    "dotenv>=0.9.9",
    "llm-openai-plugin>=0.5",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["."]

[tool.uv.sources]
llm-lmstudio = { git = "https://github.com/kevinschaul/llm-lmstudio", branch = "fix/all" }
