[project]
name = "llm-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "inspect-ai>=0.3.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-genai>=0.2.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["."]

[tool.uv.sources]
llm-lmstudio = { git = "https://github.com/kevinschaul/llm-lmstudio", branch = "fix/all" }
