[project]
name = "llm-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "inspect-ai>=0.3.0",
    "openai>=2.40.0",
    "anthropic>=0.115.0",
    "google-genai>=0.2.0",
    "pytest>=7.0.0",
    "inspect-swe>=0.2.20",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=4.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv.sources]
llm-lmstudio = { git = "https://github.com/kevinschaul/llm-lmstudio", branch = "fix/all" }
